    HIGHLIGHTS.txt in the same directory as this file.

Version 3.2  [ (under development) ]
    OVERALL:
        - Added file format documentation to reference manual.
    ENGINE:
        Class NBoolSet:
            - Using unsigned chars for byte codes.
        Class NCensus:
            - Added findAllCompletions() for completing triangulations
              with boundary.
        Class NFacePair:
            - New class for working with pairs of face numbers.
        Class NFacePairing:
            - Added convenience operator [].
            - Added hasTripleEdge(), hasBrokenDoubleEndedChain(),
              hasOneEndedChainWithDoubleHandle() and associated routines.
        Class NGluingPerms:
            - Uses new NFacePairing routines to identify certain
              situations in which no solutions are possible.
            - Uses a completely redesigned algorithm in the closed
              orientable prime minimal case.
            - Added pruning during permutation generation to eliminate
              edges identified with themselves in reverse.
        Class NNormalSurface:
            - Added routine knownCanCrush().
        Class NPerm:
            - Using unsigned chars for permutation codes.
        Class NPrismSpec:
            - New class for dealing with triangular prisms defined by
              slicing along normal quads in a tetrahedron.
        Class NSFS:
            - Better recognition of common names; now recognises all
              spaces with finite fundamental group.
        Class NTetFace:
            - Added routine setFirst().
        Class NTriangulation:
            - Interface-only skeletal query routines are now also
              implemented in the C++ calculation engine.
    UTILITIES:
        regconcat:
            - New utility for combining several data files.

Version 3.1  [ 18 October, 2002 ]
    OVERALL:
        - Added calculation engine test suite.